<resources>
    <string name="app_name">OurSpot</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="label_register">Seus dados, usando Firebase</string>
    <string name="label_your_pic">Sua foto, escolhida usando ImageUtils</string>
    <string name="label_rate_user">Avalie essa pessoa</string>

    <string name="button_save">Salvar Dados</string>
    <string name="button_get">Buscar Dados</string>
    <string name="button_login">Entrar</string>
    <string name="button_advance">Avançar</string>
    <string name="button_register">Cadastrar</string>
    <string name="button_ratings">Avaliações</string>
    <string name="button_out">Sair do spot</string>
    <string name="button_rate">Avaliar</string>
    <string name="button_interest">Tenho interesse !</string>

    <string name="hint_name">Nome</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Telefone</string>
    <string name="hint_password">Senha</string>
    <string name="hint_confirm_password">Confirmar Senha</string>

    <string name="hint_address_reference">Endereço de referência</string>
    <string name="price">Preço(R$)</string>
    <string name="members">Membros</string>
    <string name="interest_success_message">Seu interesse foi enviado com sucesso. Espere pela confirmação do proprietário na aba "Grupos". </string>
    <string name="filters">Desejo buscar lugares onde:</string>

    <string name="action_settings">Configurações</string>
    <string name="save">Salvar</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="genders">
        <item>Gênero</item>
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Não informado</item>
    </string-array>

    <string-array name="yes_no_smoke">
        <item>Fumante</item>
        <item>Sim</item>
        <item>Não</item>
    </string-array>

    <string-array name="yes_no_animal">
        <item>Possui animais</item>
        <item>Sim</item>
        <item>Não</item>
    </string-array>

    <string-array name="ocupation">
        <item>Profissão</item>
        <item>Estudante</item>
        <item>Autônomo</item>
        <item>Trabalho Formal</item>
        <item>Não informar</item>
    </string-array>

    <string-array name="age">
        <item>Idade</item>
        <item>16 - 18</item>
        <item>19 - 21</item>
        <item>22 - 25</item>
        <item>26 - 30</item>
        <item>30+</item>
    </string-array>

</resources>
